--- a/app/client/app.html
+++ b/app/client/app.html
@@ -1,6 +1,7 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<script src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=AM_HTMLorMML"></script>
 </head>
 <body>
 </body>
