layout and refactoring

--- a/app/client/app.html
+++ b/app/client/app.html
@@ -14,7 +14,7 @@
 	{{>header}}
 
 	<div class="container">
-	 <h1><img src="/henri.jpg" height="80px"/>Henri</h1>
+	
 		{{yield}}
 		
 	</div>
@@ -30,7 +30,8 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">Henri</a>
+				<img class="logo" src="/henri.jpg" />
+				<a class="navbar-brand" href="/"> Henri</a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
