--- a/app/client/home.html
+++ b/app/client/home.html
@@ -1,5 +1,5 @@
 <template name="home">
-
+ <h1><img src="/henri.jpg" height="80px"/>Henri</h1>
 <button class="btn btn-default btn-create-experiment">Create new Experiment</button>
 {{>home_experiment_list}}
 </template>
