--- a/app/client/experiment.html
+++ b/app/client/experiment.html
@@ -16,7 +16,7 @@
 
 </template>
 <template name="experimentName">
-<input class=".input-lg form-control" type="text" value="{{experiment.name}}" />
+<input class="input-lg form-control" type="text" value="{{experiment.name}}" />
 
 </template>
 <template name="objectClassEditor">
