added title changed title edit mode changed stuff to english

--- a/app/client/app.html
+++ b/app/client/app.html
@@ -1,6 +1,7 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link href='http://fonts.googleapis.com/css?family=Monsieur+La+Doulaise' rel='stylesheet' type='text/css'>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=AM_HTMLorMML"></script>
 </head>
 <body>
@@ -31,7 +32,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<img class="logo" src="/henri.jpg" />
-				<a class="navbar-brand" href="/"> Henri</a>
+				<a class="navbar-brand curvy" href="/"> Henri</a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
