--- a/app/client/home.html
+++ b/app/client/home.html
@@ -1,6 +1,8 @@
 <template name="home">
- <h1><img src="/henri.jpg" height="80px"/>Henri</h1>
-<button class="btn btn-default btn-create-experiment">Create new Experiment</button>
+<div class="jumbotron">
+ <h1 class="pageTitle"><img src="/henri.jpg" />Henri</h1>
+<button class="btn btn-primary btn-lg btn-create-experiment">Create new Experiment</button>
+</div>
 {{>home_experiment_list}}
 </template>
 
