--- a/app/client/home.html
+++ b/app/client/home.html
@@ -1,6 +1,7 @@
 <template name="home">
 <div class="jumbotron">
  <h1 class="pageTitle"><img src="/henri.jpg" />Henri</h1>
+ <p>Create and simulate Dynamic Systems easily</p>
 <button class="btn btn-primary btn-lg btn-create-experiment">Create new Experiment</button>
 </div>
 {{>home_experiment_list}}
