maded it a litte more elegant

--- a/app/client/experiment.html
+++ b/app/client/experiment.html
@@ -52,5 +52,5 @@
 	</table>
 </template>
 <template name="oneFunction">
-	<tr><td>{{variable}}</td><td>=</td><td><input id="function_{{variable}}" class="form-control" type="text" value="{{expression}}" /></td><td><div class="pretty">`{{expressionForPretty}}`</div></td></tr>
+	<tr><td>`{{variable}}`</td><td>=</td><td><input id="function_{{variable}}" class="form-control" type="text" value="{{expression}}" /></td><td><div class="pretty">`{{expressionForPretty}}`</div></td></tr>
 </template>
