updated to meteor v0.8

--- a/app/client/experiment.html
+++ b/app/client/experiment.html
@@ -40,7 +40,7 @@
 <template name="functions">
 	<h4>3.) Define Functions</h4>
 	<table class="functions">
-		{{#eachWithParentExperimentID variables}}
+		{{#each variables}}
 		{{#if variable}}
 		{{#if type}}
 		
@@ -48,15 +48,16 @@
 		{{/if}}
 		{{/if}}
 
-		{{/eachWithParentExperimentID}}
+		{{/each}}
 	</table>
 </template>
 <template name="oneFunction">
 	<tr>
-		<td>`{{variable}}`</td>
+		<td>{{variable}}</td>
 		<td>=</td>
 		<td><input id="function_{{variable}}" class="function form-control" placeholder="function" type="text" value="{{function.expression}}" /></td>
-		<td><div class="pretty">`{{expressionForPretty}}`</div></td>
+		<td><div class="pretty">{{expressionForPretty}}</div>
+		</td>
 		<td><input id="comment_{{variable}}" class="comment form-control" placeholder="comment" type="text" value="{{function.comment}}" /></td>
 	</tr>
 </template>
