--- a/app/client/app.html
+++ b/app/client/app.html
@@ -16,7 +16,7 @@
 
 	<div class="container">
 	
-		{{yield}}
+		{{>yield}}
 		
 	</div>
 </template>
@@ -37,7 +37,7 @@
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="/">Home</a></li>
-					{{ loginButtons }}
+					{{loginButtons }}
 				</ul>
 			</div><!-- /.nav-collapse -->
 		</div><!-- /.container -->
