--- a/app/client/experiment.html
+++ b/app/client/experiment.html
@@ -76,4 +76,6 @@
 
 <template name="controls">
 <button class="btn btn-step">step</button>
+<button class="btn btn-play">play / pause</button>
+
 </template>
