--- a/app/client/simplePlot.html
+++ b/app/client/simplePlot.html
@@ -1,4 +1,5 @@
 <template name="simplePlot">
-<button class="btn btn-clear">Clear</button>
-<div class="chartcontainer"></div>
+	{{>controls}}
+	<button class="btn btn-clear">Clear</button>
+	<div class="chartcontainer"></div>
 </template>
