refactored, added loader

--- a/app/client/app.html
+++ b/app/client/app.html
@@ -15,7 +15,7 @@
 	{{>header}}
 
 	<div class="container">
-	
+
 		{{>yield}}
 		
 	</div>
@@ -45,6 +45,9 @@
 </template>
 
 <template name="loading">
+<div class="loading">
+<img src="/loading.gif" />
 <p>loading</p>
+</div>
 </template>
 
