--- a/app/client/experiment.html
+++ b/app/client/experiment.html
@@ -24,7 +24,7 @@
 		{{>simplePlot}}
 	</div>
 
-	<button class="btn btn-delete btn-warning">Delete Experiment</button>
+	<button class="btn btn-delete btn-warning"><span class="glyphicon glyphicon-warning-sign"></span> Delete Experiment</button>
 	<br />
 	<br />
 	
