some fixes, added reset button

--- a/app/client/plots/onePlot.html
+++ b/app/client/plots/onePlot.html
@@ -21,5 +21,7 @@
 	<button class="btn btn-step">step</button>
 	<button class="btn btn-play">play / pause</button>
 
+<button class="btn btn-reset">Reset Experiment</button>
+
 
 </template>
