--- a/app/client/plots/plots.html
+++ b/app/client/plots/plots.html
@@ -11,6 +11,9 @@
 <button class="btn btn-add-x_t">
 Add new x_t Plot
 </button>
+<button class="btn btn-add-2d">
+Add new 2d Plot
+</button>
 </div>
 
 </template>
