--- a/app/client/plots/onePlot.html
+++ b/app/client/plots/onePlot.html
@@ -4,8 +4,10 @@
 
 <template name="onePlot">
 <div class="col-xs-12 col-sm-12">
+<div class="controls">
 {{>engineControls}}
 <button class="btn btn-delete btn-danger">Delete plot</button>	
+</div>
 
 
   {{#with chooseTemplate plot.type}}
