--- a/app/client/plots/plot_x_t.html
+++ b/app/client/plots/plot_x_t.html
@@ -1,7 +1,8 @@
 <template name="plot_x_t">
 	
-	
+	<div>
 	<button class="btn btn-clear">Clear</button>
+	</div>
 	<input type="number" class="form-control input-timeRange" value="{{plot.timeRange}}"/>
 	
 	<div class="chartcontainer"></div>
