--- a/app/client/experiment.html
+++ b/app/client/experiment.html
@@ -4,8 +4,27 @@
 	
 	{{>experimentName}}
 
+
 	
-	<div class="col-xs-6 col-sm-4">
+	{{>experimentEditor}}
+	
+
+	{{>plots}}
+
+	{{>experimentControls}}
+	<br />
+	<br />
+	
+
+</template>
+
+<template name="experimentEditor">
+<div class="experimentEditor panel panel-default">
+ <div class="panel-heading">
+<h4 data-toggle="collapse" data-target=".experimentEditor .panel-body">Edit Experiment</h4>
+</div>
+<div class="panel-body collapse in">
+<div class="col-xs-6 col-sm-4">
 		{{>constantsEditor}}
 	</div>
 	<div class="col-xs-6 col-sm-4">
@@ -17,15 +36,8 @@
 	<div class="col-xs-12 col-sm-12">
 		{{>functions}}
 	</div>
-	
-
-	{{>plots}}
-
-	{{>experimentControls}}
-	<br />
-	<br />
-	
-
+	</div>
+	</div>
 </template>
 <template name="experimentControls">
 <button class="btn btn-delete btn-warning"><span class="glyphicon glyphicon-warning-sign"></span> Delete Experiment</button>
