--- a/app/client/experimentEditor.html
+++ b/app/client/experimentEditor.html
@@ -36,7 +36,7 @@
 
 		<td>{{variable}}</td>
 		<td>=</td>
-		<td><input id="function_{{variable}}" class="function form-control" placeholder="function" type="text" value="{{function.expression}}" /></td>
+		<td width="40%"><input id="function_{{variable}}" class="function form-control" placeholder="function" type="text" value="{{function.expression}}" /></td>
 		<td><div class="pretty">{{expressionForPretty}}</div>
 		</td>
 		
