--- a/app/client/home.html
+++ b/app/client/home.html
@@ -8,6 +8,7 @@
 </template>
 
 <template name="home_experiment_list">
+	{{setTitle "Henri"}}
 	<h2>All Experiments</h2>
 	<ul class="home_experiment_list">
 		{{#each experiments}}
