--- a/app/client/plots/onePlot.html
+++ b/app/client/plots/onePlot.html
@@ -11,7 +11,7 @@
 <div class="panel-body">
 <div class="controls">
 {{>engineControls}}
-<button class="btn btn-delete btn-danger">Delete plot</button>	
+<button class="btn btn-delete btn-danger"><span class="glyphicon glyphicon-remove"></span> Delete plot</button>	
 </div>
 
 
@@ -27,10 +27,10 @@
 </template>
 
 <template name="engineControls">
-	<button class="btn btn-step">step</button>
-	<button class="btn btn-play">play / pause</button>
+	<button class="btn btn-info btn-step"><span class="glyphicon glyphicon-step-forward"></span> step</button>
+	<button class="btn btn-primary btn-play"><span class="glyphicon {{playIcon}}"></span> {{playLabel}}</button>
 
-<button class="btn btn-reset">Reset Experiment</button>
+<button class="btn btn-reset btn-warning"><span class="glyphicon glyphicon-fast-backward"></span> Reset Experiment</button>
 
 
 </template>
