added toggle style

--- a/app/client/experiment.html
+++ b/app/client/experiment.html
@@ -20,8 +20,8 @@
 
 <template name="experimentEditor">
 	<div class="experimentEditor panel panel-default">
-		<div class="panel-heading">
-			<h4 data-toggle="collapse" data-target=".experimentEditor .panel-body">Edit Experiment</h4>
+		<div class="panel-heading" data-toggle="collapse" data-target=".experimentEditor .panel-body">
+			<h4>Edit Experiment</h4>
 		</div>
 		<div class="panel-body collapse in">
 			<div class="col-xs-6 col-sm-3">
