--- a/app/client/plots/plots.html
+++ b/app/client/plots/plots.html
@@ -1,7 +1,7 @@
 <template name="plots">
 <div class="plots panel panel-default">
- <div class="panel-heading">
-<h4 data-toggle="collapse" data-target=".plots .plots-body">Plots</h4>
+ <div class="panel-heading" data-toggle="collapse" data-target=".plots .plots-body">
+<h4>Plots</h4>
 </div>
 <div class="panel-body plots-body collapse in">
 {{#each plots}}
