--- a/app/client/plots/onePlot.html
+++ b/app/client/plots/onePlot.html
@@ -29,7 +29,7 @@
 </template>
 
 <template name="engineControls">
-	
+<p class="time">t = {{time}}</p>
 	<button class="btn btn-primary btn-play">
 		<span class="glyphicon {{playIcon}}"></span> {{playLabel}}
 	</button>
@@ -39,6 +39,7 @@
 	<button class="btn btn-reset btn-warning">
 		<span class="glyphicon glyphicon-fast-backward"></span> Reset Experiment
 	</button>
+
 
 
 </template>
