--- a/app/client/app.html
+++ b/app/client/app.html
@@ -1,8 +1,10 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="shortcut icon" href="/favicon.ico">
 	<link href='http://fonts.googleapis.com/css?family=Monsieur+La+Doulaise' rel='stylesheet' type='text/css'>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=AM_HTMLorMML"></script>
+
 </head>
 <body>
 </body>
