--- a/app/client/experiment.html
+++ b/app/client/experiment.html
@@ -20,9 +20,12 @@
 			<h4>Edit Experiment</h4>
 		</div>
 		<div class="panel-body collapse in">
-			<div class="col-xs-6 col-sm-3">
-				{{>constantsEditor}}
-			</div>
+            <div class="col-xs-12 col-sm-12">
+                {{>fixedFieldsEditor}}
+            </div>
+            <div class="col-xs-6 col-sm-3">
+                {{>constantsEditor}}
+            </div>
 			<div class="col-xs-6 col-sm-3">
 				{{>objectClassEditor}}
 			</div>
