Renamed fixed fields to configurations

--- a/app/client/experiment.html
+++ b/app/client/experiment.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="panel-body collapse in">
             <div class="col-xs-12 col-sm-12">
-                {{>fixedFieldsEditor}}
+                {{>configurationsEditor}}
             </div>
             <div class="col-xs-6 col-sm-3">
                 {{>constantsEditor}}
