--- a/app/client/experimentEditor.html
+++ b/app/client/experimentEditor.html
@@ -1,5 +1,5 @@
-<template name="fixedFieldsEditor">
-    <h4>1.) Fixed fields</h4>
+<template name="configurationsEditor">
+    <h4>1.) Configurations</h4>
     <div class="table"></div>
 </template>
 
