--- a/app/client/plots/plot_2d.html
+++ b/app/client/plots/plot_2d.html
@@ -4,17 +4,21 @@
 
 	
 	<div class="chartcontainer col-xs-12 col-sm-7 col-md-8 col-lg-9">
-		<canvas class="canvas" width="600" height="600"></canvas>
+		{{>plot_2d_canvas}}
 	</div>
-	<div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
+	<div class="plotControls col-xs-12 col-sm-5 col-md-4 col-lg-3">
 		{{>plot_2d_controls}}
 	</div>
 	
 </template>
 
+<template name="plot_2d_canvas">
+<div class="plot_2d_canvas"><canvas></canvas></div>
+</template>
+
 
 <template name="plot_2d_controls">
-	<div class="plotControls panel panel-default">
+	<div class="panel panel-default">
 		<div class="panel-heading">
 			<h3 class="panel-title">Plot Options</h3>
 		</div>
