--- a/app/client/plots/plot_x_t.html
+++ b/app/client/plots/plot_x_t.html
@@ -6,13 +6,13 @@
 	
 
 	<div class="chartcontainer col-xs-12 col-sm-7 col-md-8 col-lg-9"></div>
-	<div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
+	<div class="plotControls col-xs-12 col-sm-5 col-md-4 col-lg-3">
 		{{>plot_x_t_controls}}
 	</div>
 </template>
 
 <template name="plot_x_t_controls">
-	<div class="plotControls panel panel-default">
+	<div class="panel panel-default">
 		<div class="panel-heading">
 			<h3 class="panel-title">Plot Options</h3>
 		</div>
