added delay added nightmode fixed some minor bugs updated meteor

--- a/app/client/app.html
+++ b/app/client/app.html
@@ -39,7 +39,8 @@
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="/">Home</a></li>
-					{{loginButtons }}
+					<li><a class="btn-nightmode"><span class="glyphicon glyphicon-adjust"></span> Night mode</a></li>
+					
 				</ul>
 			</div><!-- /.nav-collapse -->
 		</div><!-- /.container -->
