added buttons in header

--- a/app/client/app.html
+++ b/app/client/app.html
@@ -40,7 +40,7 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="/">Home</a></li>
 					<li><a class="btn-nightmode"><span class="glyphicon glyphicon-adjust"></span> Night mode</a></li>
-					
+					 {{> yield region='headerNavigation'}}
 				</ul>
 			</div><!-- /.nav-collapse -->
 		</div><!-- /.container -->
