--- a/app/client/experiment.html
+++ b/app/client/experiment.html
@@ -14,6 +14,10 @@
 
 </template>
 
+<template name="experimentHeaderNavigation">
+<li>{{>engineControls}}</li>
+</template>
+
 <template name="experimentEditor">
 	<div class="experimentEditor panel panel-default">
 		<div class="panel-heading" data-toggle="collapse" data-target=".experimentEditor .panel-body">
