added first version of 3d plot

--- a/app/client/plots/plots.html
+++ b/app/client/plots/plots.html
@@ -21,6 +21,9 @@ Add new x_t Plot
 <button class="btn btn-add-2d">
 Add new 2d Plot
 </button>
+<button class="btn btn-add-3d">
+Add new 3d Plot
+</button>
 </div>
 
 </template>
