--- a/app/client/plots/plots.html
+++ b/app/client/plots/plots.html
@@ -22,7 +22,7 @@ Add new x_t Plot
 Add new 2d Plot
 </button>
 <button class="btn btn-add-3d">
-Add new 3d Plot
+Add new 3d Plot (*EXPERIMENTAL* requires WebGL-Support)
 </button>
 </div>
 
