change button color

--- a/app/client/plots/plots.html
+++ b/app/client/plots/plots.html
@@ -15,13 +15,13 @@
 
 <template name="addPlots">
 <div class="col-xs-12 col-sm-12">
-<button class="btn btn-add-x_t">
+<button class="btn btn-primary btn-add-x_t">
 Add new x_t Plot
 </button>
-<button class="btn btn-add-2d">
+<button class="btn btn-primary btn-add-2d">
 Add new 2d Plot
 </button>
-<button class="btn btn-add-3d">
+<button class="btn btn-primary btn-add-3d">
 Add new 3d Plot (*EXPERIMENTAL* requires WebGL-Support)
 </button>
 </div>
